syntax = "proto3";
package datafiles;
option go_package = ".";

service MoneyTransaction {
  rpc MakeTransaction (TransactionRequest) returns (TransactionResponse);
}

message TransactionRequest {
  string from = 1;
  string to = 2;
  float amount = 3;
}

message TransactionResponse {
  bool confirmation = 1;
}

